SERVER-36565 Check if txn in progress or aborted when executing write commands

(cherry picked from commit d3941824b4473898bf987c7db381a84879d33c27)