src/mongo/db/transaction_participant.h
@@ -253,6 +253,16 @@ public:
     }
 
     /**
+     * Returns true if we are in an active multi-document transaction or if the transaction has
+     * been aborted. This is used to cover the case where a transaction has been aborted, but the
+     * OperationContext state has not been cleared yet.
+     */
+    bool inActiveOrKilledMultiDocumentTransaction() const {
+        stdx::lock_guard<stdx::mutex> lk(_mutex);
+        return (_txnState.inMultiDocumentTransaction(lk) || _txnState.isAborted(lk));
+    }
+
+    /**
      * Adds a stored operation to the list of stored operations for the current multi-document
      * (non-autocommit) transaction.  It is illegal to add operations when no multi-document
      * transaction is in progress.
